budgets/namespace.yaml

---

kind:             Namespace
apiVersion:       v1
metadata:
    name:           prueba-ivan
