budgets/deployment.yaml

kind:                 Deployment
apiVersion:           apps/v1
metadata:
    name:             nginx

spec:
    replicas:         2
    selector:
        matchLabels:
            app:      nginx
    template:
        metadata:
            labels:
                app:  nginx
        spec:
            affinity:
                nodeAffinity:
                  preferredDuringSchedulingIgnoredDuringExecution:
                    - weight: 1
                      preference:
                        matchExpressions:
                          - key: nodo-ivan
                            operator: In
                            values:
                              - nodo2
            containers:
              - name: nginx
                image: nginx
                imagePullPolicy:  IfNotPresent
                resources:
                    requests:
                        memory: 35Mi
                    limits:
                        memory: 35Mi
